# NegativeSplit

./: .gitignore  .pre-commit-config.yaml  Recipe.md  pyproject.toml  ruff.toml  run_sync.py
apps/flet-ui/: main.py  pyproject.toml
apps/flet-ui/flet_ui.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
